Should now work without the "--add-modules" hack (at least for Java 8)